flex-bison/parser.output
Grammar

    0 $accept: program $end

    1 program: statement_list

    2 statement_list: statement
    3               | statement_list statement

    4 statement: declaration_statement SEMICOLON
    5          | assignment_statement SEMICOLON
    6          | function_definition_statement
    7          | function_call_statement SEMICOLON
    8          | print_statement SEMICOLON
    9          | while_statement
   10          | if_statement
   11          | return_statement SEMICOLON

   12 block: LBRACE statement_list RBRACE

   13 declaration_statement: TYPE IDENTIFIER
   14                      | TYPE IDENTIFIER ASSIGN relexpression

   15 assignment_statement: IDENTIFIER ASSIGN relexpression

   16 function_definition_statement: FUNCTION IDENTIFIER LPAREN function_parameters RPAREN ARROW function_return_type function_body

   17 function_parameters: ε
   18                    | function_parameter_list

   19 function_parameter_list: parameter
   20                        | function_parameter_list COMMA parameter

   21 parameter: TYPE IDENTIFIER

   22 function_return_type: TYPE
   23                     | VOID

   24 function_body: block

   25 function_call_statement: IDENTIFIER LPAREN function_arguments RPAREN

   26 function_arguments: ε
   27                   | function_argument_list

   28 function_argument_list: expression
   29                       | function_argument_list COMMA relexpression

   30 print_statement: PRINT LPAREN relexpression RPAREN

   31 while_statement: WHILE LPAREN relexpression RPAREN block

   32 if_statement: IF LPAREN relexpression RPAREN block
   33             | IF LPAREN relexpression RPAREN block ELSE block

   34 return_statement: RETURN relexpression

   35 relexpression: expression LESS_THAN expression
   36              | expression LESS_EQUAL expression
   37              | expression EQUAL expression
   38              | expression NOT_EQUAL expression
   39              | expression GREATER_EQUAL expression
   40              | expression GREATER_THAN expression
   41              | expression

   42 expression: term PLUS term
   43           | term MINUS term
   44           | term OR term
   45           | term

   46 term: factor MULT factor
   47     | factor POW factor
   48     | factor DIV factor
   49     | factor AND factor
   50     | factor

   51 factor: INT_LITERAL
   52       | DOUBLE_LITERAL
   53       | BOOL_LITERAL
   54       | STRING_LITERAL
   55       | IDENTIFIER
   56       | NOT factor
   57       | PLUS factor
   58       | MINUS factor
   59       | LPAREN relexpression RPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    STRING_LITERAL (258) 54
    INT_LITERAL (259) 51
    DOUBLE_LITERAL (260) 52
    BOOL_LITERAL (261) 53
    IDENTIFIER (262) 13 14 15 16 21 25 55
    FUNCTION (263) 16
    TYPE (264) 13 14 21 22
    VOID (265) 23
    AND (266) 49
    OR (267) 44
    NOT (268) 56
    EQUAL (269) 37
    NOT_EQUAL (270) 38
    LESS_THAN (271) 35
    LESS_EQUAL (272) 36
    GREATER_THAN (273) 40
    GREATER_EQUAL (274) 39
    PRINT (275) 30
    IF (276) 32 33
    ELSE (277) 33
    WHILE (278) 31
    RETURN (279) 34
    ARROW (280) 16
    PLUS (281) 42 57
    MINUS (282) 43 58
    MULT (283) 46
    DIV (284) 48
    POW (285) 47
    LPAREN (286) 16 25 30 31 32 33 59
    RPAREN (287) 16 25 30 31 32 33 59
    LBRACE (288) 12
    RBRACE (289) 12
    COMMA (290) 20 29
    SEMICOLON (291) 4 5 7 8 11
    ASSIGN (292) 14 15


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    program (39)
        on left: 1
        on right: 0
    statement_list (40)
        on left: 2 3
        on right: 1 3 12
    statement (41)
        on left: 4 5 6 7 8 9 10 11
        on right: 2 3
    block (42)
        on left: 12
        on right: 24 31 32 33
    declaration_statement (43)
        on left: 13 14
        on right: 4
    assignment_statement (44)
        on left: 15
        on right: 5
    function_definition_statement (45)
        on left: 16
        on right: 6
    function_parameters (46)
        on left: 17 18
        on right: 16
    function_parameter_list (47)
        on left: 19 20
        on right: 18 20
    parameter (48)
        on left: 21
        on right: 19 20
    function_return_type (49)
        on left: 22 23
        on right: 16
    function_body (50)
        on left: 24
        on right: 16
    function_call_statement (51)
        on left: 25
        on right: 7
    function_arguments (52)
        on left: 26 27
        on right: 25
    function_argument_list (53)
        on left: 28 29
        on right: 27 29
    print_statement (54)
        on left: 30
        on right: 8
    while_statement (55)
        on left: 31
        on right: 9
    if_statement (56)
        on left: 32 33
        on right: 10
    return_statement (57)
        on left: 34
        on right: 11
    relexpression (58)
        on left: 35 36 37 38 39 40 41
        on right: 14 15 29 30 31 32 33 34 59
    expression (59)
        on left: 42 43 44 45
        on right: 28 35 36 37 38 39 40 41
    term (60)
        on left: 46 47 48 49 50
        on right: 42 43 44 45
    factor (61)
        on left: 51 52 53 54 55 56 57 58 59
        on right: 46 47 48 49 50 56 57 58


State 0

    0 $accept: • program $end

    IDENTIFIER  shift, and go to state 1
    FUNCTION    shift, and go to state 2
    TYPE        shift, and go to state 3
    PRINT       shift, and go to state 4
    IF          shift, and go to state 5
    WHILE       shift, and go to state 6
    RETURN      shift, and go to state 7

    program                        go to state 8
    statement_list                 go to state 9
    statement                      go to state 10
    declaration_statement          go to state 11
    assignment_statement           go to state 12
    function_definition_statement  go to state 13
    function_call_statement        go to state 14
    print_statement                go to state 15
    while_statement                go to state 16
    if_statement                   go to state 17
    return_statement               go to state 18


State 1

   15 assignment_statement: IDENTIFIER • ASSIGN relexpression
   25 function_call_statement: IDENTIFIER • LPAREN function_arguments RPAREN

    LPAREN  shift, and go to state 19
    ASSIGN  shift, and go to state 20


State 2

   16 function_definition_statement: FUNCTION • IDENTIFIER LPAREN function_parameters RPAREN ARROW function_return_type function_body

    IDENTIFIER  shift, and go to state 21


State 3

   13 declaration_statement: TYPE • IDENTIFIER
   14                      | TYPE • IDENTIFIER ASSIGN relexpression

    IDENTIFIER  shift, and go to state 22


State 4

   30 print_statement: PRINT • LPAREN relexpression RPAREN

    LPAREN  shift, and go to state 23


State 5

   32 if_statement: IF • LPAREN relexpression RPAREN block
   33             | IF • LPAREN relexpression RPAREN block ELSE block

    LPAREN  shift, and go to state 24


State 6

   31 while_statement: WHILE • LPAREN relexpression RPAREN block

    LPAREN  shift, and go to state 25


State 7

   34 return_statement: RETURN • relexpression

    STRING_LITERAL  shift, and go to state 26
    INT_LITERAL     shift, and go to state 27
    DOUBLE_LITERAL  shift, and go to state 28
    BOOL_LITERAL    shift, and go to state 29
    IDENTIFIER      shift, and go to state 30
    NOT             shift, and go to state 31
    PLUS            shift, and go to state 32
    MINUS           shift, and go to state 33
    LPAREN          shift, and go to state 34

    relexpression  go to state 35
    expression     go to state 36
    term           go to state 37
    factor         go to state 38


State 8

    0 $accept: program • $end

    $end  shift, and go to state 39


State 9

    1 program: statement_list •
    3 statement_list: statement_list • statement

    IDENTIFIER  shift, and go to state 1
    FUNCTION    shift, and go to state 2
    TYPE        shift, and go to state 3
    PRINT       shift, and go to state 4
    IF          shift, and go to state 5
    WHILE       shift, and go to state 6
    RETURN      shift, and go to state 7

    $default  reduce using rule 1 (program)

    statement                      go to state 40
    declaration_statement          go to state 11
    assignment_statement           go to state 12
    function_definition_statement  go to state 13
    function_call_statement        go to state 14
    print_statement                go to state 15
    while_statement                go to state 16
    if_statement                   go to state 17
    return_statement               go to state 18


State 10

    2 statement_list: statement •

    $default  reduce using rule 2 (statement_list)


State 11

    4 statement: declaration_statement • SEMICOLON

    SEMICOLON  shift, and go to state 41


State 12

    5 statement: assignment_statement • SEMICOLON

    SEMICOLON  shift, and go to state 42


State 13

    6 statement: function_definition_statement •

    $default  reduce using rule 6 (statement)


State 14

    7 statement: function_call_statement • SEMICOLON

    SEMICOLON  shift, and go to state 43


State 15

    8 statement: print_statement • SEMICOLON

    SEMICOLON  shift, and go to state 44


State 16

    9 statement: while_statement •

    $default  reduce using rule 9 (statement)


State 17

   10 statement: if_statement •

    $default  reduce using rule 10 (statement)


State 18

   11 statement: return_statement • SEMICOLON

    SEMICOLON  shift, and go to state 45


State 19

   25 function_call_statement: IDENTIFIER LPAREN • function_arguments RPAREN

    STRING_LITERAL  shift, and go to state 26
    INT_LITERAL     shift, and go to state 27
    DOUBLE_LITERAL  shift, and go to state 28
    BOOL_LITERAL    shift, and go to state 29
    IDENTIFIER      shift, and go to state 30
    NOT             shift, and go to state 31
    PLUS            shift, and go to state 32
    MINUS           shift, and go to state 33
    LPAREN          shift, and go to state 34

    $default  reduce using rule 26 (function_arguments)

    function_arguments      go to state 46
    function_argument_list  go to state 47
    expression              go to state 48
    term                    go to state 37
    factor                  go to state 38


State 20

   15 assignment_statement: IDENTIFIER ASSIGN • relexpression

    STRING_LITERAL  shift, and go to state 26
    INT_LITERAL     shift, and go to state 27
    DOUBLE_LITERAL  shift, and go to state 28
    BOOL_LITERAL    shift, and go to state 29
    IDENTIFIER      shift, and go to state 30
    NOT             shift, and go to state 31
    PLUS            shift, and go to state 32
    MINUS           shift, and go to state 33
    LPAREN          shift, and go to state 34

    relexpression  go to state 49
    expression     go to state 36
    term           go to state 37
    factor         go to state 38


State 21

   16 function_definition_statement: FUNCTION IDENTIFIER • LPAREN function_parameters RPAREN ARROW function_return_type function_body

    LPAREN  shift, and go to state 50


State 22

   13 declaration_statement: TYPE IDENTIFIER •
   14                      | TYPE IDENTIFIER • ASSIGN relexpression

    ASSIGN  shift, and go to state 51

    $default  reduce using rule 13 (declaration_statement)


State 23

   30 print_statement: PRINT LPAREN • relexpression RPAREN

    STRING_LITERAL  shift, and go to state 26
    INT_LITERAL     shift, and go to state 27
    DOUBLE_LITERAL  shift, and go to state 28
    BOOL_LITERAL    shift, and go to state 29
    IDENTIFIER      shift, and go to state 30
    NOT             shift, and go to state 31
    PLUS            shift, and go to state 32
    MINUS           shift, and go to state 33
    LPAREN          shift, and go to state 34

    relexpression  go to state 52
    expression     go to state 36
    term           go to state 37
    factor         go to state 38


State 24

   32 if_statement: IF LPAREN • relexpression RPAREN block
   33             | IF LPAREN • relexpression RPAREN block ELSE block

    STRING_LITERAL  shift, and go to state 26
    INT_LITERAL     shift, and go to state 27
    DOUBLE_LITERAL  shift, and go to state 28
    BOOL_LITERAL    shift, and go to state 29
    IDENTIFIER      shift, and go to state 30
    NOT             shift, and go to state 31
    PLUS            shift, and go to state 32
    MINUS           shift, and go to state 33
    LPAREN          shift, and go to state 34

    relexpression  go to state 53
    expression     go to state 36
    term           go to state 37
    factor         go to state 38


State 25

   31 while_statement: WHILE LPAREN • relexpression RPAREN block

    STRING_LITERAL  shift, and go to state 26
    INT_LITERAL     shift, and go to state 27
    DOUBLE_LITERAL  shift, and go to state 28
    BOOL_LITERAL    shift, and go to state 29
    IDENTIFIER      shift, and go to state 30
    NOT             shift, and go to state 31
    PLUS            shift, and go to state 32
    MINUS           shift, and go to state 33
    LPAREN          shift, and go to state 34

    relexpression  go to state 54
    expression     go to state 36
    term           go to state 37
    factor         go to state 38


State 26

   54 factor: STRING_LITERAL •

    $default  reduce using rule 54 (factor)


State 27

   51 factor: INT_LITERAL •

    $default  reduce using rule 51 (factor)


State 28

   52 factor: DOUBLE_LITERAL •

    $default  reduce using rule 52 (factor)


State 29

   53 factor: BOOL_LITERAL •

    $default  reduce using rule 53 (factor)


State 30

   55 factor: IDENTIFIER •

    $default  reduce using rule 55 (factor)


State 31

   56 factor: NOT • factor

    STRING_LITERAL  shift, and go to state 26
    INT_LITERAL     shift, and go to state 27
    DOUBLE_LITERAL  shift, and go to state 28
    BOOL_LITERAL    shift, and go to state 29
    IDENTIFIER      shift, and go to state 30
    NOT             shift, and go to state 31
    PLUS            shift, and go to state 32
    MINUS           shift, and go to state 33
    LPAREN          shift, and go to state 34

    factor  go to state 55


State 32

   57 factor: PLUS • factor

    STRING_LITERAL  shift, and go to state 26
    INT_LITERAL     shift, and go to state 27
    DOUBLE_LITERAL  shift, and go to state 28
    BOOL_LITERAL    shift, and go to state 29
    IDENTIFIER      shift, and go to state 30
    NOT             shift, and go to state 31
    PLUS            shift, and go to state 32
    MINUS           shift, and go to state 33
    LPAREN          shift, and go to state 34

    factor  go to state 56


State 33

   58 factor: MINUS • factor

    STRING_LITERAL  shift, and go to state 26
    INT_LITERAL     shift, and go to state 27
    DOUBLE_LITERAL  shift, and go to state 28
    BOOL_LITERAL    shift, and go to state 29
    IDENTIFIER      shift, and go to state 30
    NOT             shift, and go to state 31
    PLUS            shift, and go to state 32
    MINUS           shift, and go to state 33
    LPAREN          shift, and go to state 34

    factor  go to state 57


State 34

   59 factor: LPAREN • relexpression RPAREN

    STRING_LITERAL  shift, and go to state 26
    INT_LITERAL     shift, and go to state 27
    DOUBLE_LITERAL  shift, and go to state 28
    BOOL_LITERAL    shift, and go to state 29
    IDENTIFIER      shift, and go to state 30
    NOT             shift, and go to state 31
    PLUS            shift, and go to state 32
    MINUS           shift, and go to state 33
    LPAREN          shift, and go to state 34

    relexpression  go to state 58
    expression     go to state 36
    term           go to state 37
    factor         go to state 38


State 35

   34 return_statement: RETURN relexpression •

    $default  reduce using rule 34 (return_statement)


State 36

   35 relexpression: expression • LESS_THAN expression
   36              | expression • LESS_EQUAL expression
   37              | expression • EQUAL expression
   38              | expression • NOT_EQUAL expression
   39              | expression • GREATER_EQUAL expression
   40              | expression • GREATER_THAN expression
   41              | expression •

    EQUAL          shift, and go to state 59
    NOT_EQUAL      shift, and go to state 60
    LESS_THAN      shift, and go to state 61
    LESS_EQUAL     shift, and go to state 62
    GREATER_THAN   shift, and go to state 63
    GREATER_EQUAL  shift, and go to state 64

    $default  reduce using rule 41 (relexpression)


State 37

   42 expression: term • PLUS term
   43           | term • MINUS term
   44           | term • OR term
   45           | term •

    OR     shift, and go to state 65
    PLUS   shift, and go to state 66
    MINUS  shift, and go to state 67

    $default  reduce using rule 45 (expression)


State 38

   46 term: factor • MULT factor
   47     | factor • POW factor
   48     | factor • DIV factor
   49     | factor • AND factor
   50     | factor •

    AND   shift, and go to state 68
    MULT  shift, and go to state 69
    DIV   shift, and go to state 70
    POW   shift, and go to state 71

    $default  reduce using rule 50 (term)


State 39

    0 $accept: program $end •

    $default  accept


State 40

    3 statement_list: statement_list statement •

    $default  reduce using rule 3 (statement_list)


State 41

    4 statement: declaration_statement SEMICOLON •

    $default  reduce using rule 4 (statement)


State 42

    5 statement: assignment_statement SEMICOLON •

    $default  reduce using rule 5 (statement)


State 43

    7 statement: function_call_statement SEMICOLON •

    $default  reduce using rule 7 (statement)


State 44

    8 statement: print_statement SEMICOLON •

    $default  reduce using rule 8 (statement)


State 45

   11 statement: return_statement SEMICOLON •

    $default  reduce using rule 11 (statement)


State 46

   25 function_call_statement: IDENTIFIER LPAREN function_arguments • RPAREN

    RPAREN  shift, and go to state 72


State 47

   27 function_arguments: function_argument_list •
   29 function_argument_list: function_argument_list • COMMA relexpression

    COMMA  shift, and go to state 73

    $default  reduce using rule 27 (function_arguments)


State 48

   28 function_argument_list: expression •

    $default  reduce using rule 28 (function_argument_list)


State 49

   15 assignment_statement: IDENTIFIER ASSIGN relexpression •

    $default  reduce using rule 15 (assignment_statement)


State 50

   16 function_definition_statement: FUNCTION IDENTIFIER LPAREN • function_parameters RPAREN ARROW function_return_type function_body

    TYPE  shift, and go to state 74

    $default  reduce using rule 17 (function_parameters)

    function_parameters      go to state 75
    function_parameter_list  go to state 76
    parameter                go to state 77


State 51

   14 declaration_statement: TYPE IDENTIFIER ASSIGN • relexpression

    STRING_LITERAL  shift, and go to state 26
    INT_LITERAL     shift, and go to state 27
    DOUBLE_LITERAL  shift, and go to state 28
    BOOL_LITERAL    shift, and go to state 29
    IDENTIFIER      shift, and go to state 30
    NOT             shift, and go to state 31
    PLUS            shift, and go to state 32
    MINUS           shift, and go to state 33
    LPAREN          shift, and go to state 34

    relexpression  go to state 78
    expression     go to state 36
    term           go to state 37
    factor         go to state 38


State 52

   30 print_statement: PRINT LPAREN relexpression • RPAREN

    RPAREN  shift, and go to state 79


State 53

   32 if_statement: IF LPAREN relexpression • RPAREN block
   33             | IF LPAREN relexpression • RPAREN block ELSE block

    RPAREN  shift, and go to state 80


State 54

   31 while_statement: WHILE LPAREN relexpression • RPAREN block

    RPAREN  shift, and go to state 81


State 55

   56 factor: NOT factor •

    $default  reduce using rule 56 (factor)


State 56

   57 factor: PLUS factor •

    $default  reduce using rule 57 (factor)


State 57

   58 factor: MINUS factor •

    $default  reduce using rule 58 (factor)


State 58

   59 factor: LPAREN relexpression • RPAREN

    RPAREN  shift, and go to state 82


State 59

   37 relexpression: expression EQUAL • expression

    STRING_LITERAL  shift, and go to state 26
    INT_LITERAL     shift, and go to state 27
    DOUBLE_LITERAL  shift, and go to state 28
    BOOL_LITERAL    shift, and go to state 29
    IDENTIFIER      shift, and go to state 30
    NOT             shift, and go to state 31
    PLUS            shift, and go to state 32
    MINUS           shift, and go to state 33
    LPAREN          shift, and go to state 34

    expression  go to state 83
    term        go to state 37
    factor      go to state 38


State 60

   38 relexpression: expression NOT_EQUAL • expression

    STRING_LITERAL  shift, and go to state 26
    INT_LITERAL     shift, and go to state 27
    DOUBLE_LITERAL  shift, and go to state 28
    BOOL_LITERAL    shift, and go to state 29
    IDENTIFIER      shift, and go to state 30
    NOT             shift, and go to state 31
    PLUS            shift, and go to state 32
    MINUS           shift, and go to state 33
    LPAREN          shift, and go to state 34

    expression  go to state 84
    term        go to state 37
    factor      go to state 38


State 61

   35 relexpression: expression LESS_THAN • expression

    STRING_LITERAL  shift, and go to state 26
    INT_LITERAL     shift, and go to state 27
    DOUBLE_LITERAL  shift, and go to state 28
    BOOL_LITERAL    shift, and go to state 29
    IDENTIFIER      shift, and go to state 30
    NOT             shift, and go to state 31
    PLUS            shift, and go to state 32
    MINUS           shift, and go to state 33
    LPAREN          shift, and go to state 34

    expression  go to state 85
    term        go to state 37
    factor      go to state 38


State 62

   36 relexpression: expression LESS_EQUAL • expression

    STRING_LITERAL  shift, and go to state 26
    INT_LITERAL     shift, and go to state 27
    DOUBLE_LITERAL  shift, and go to state 28
    BOOL_LITERAL    shift, and go to state 29
    IDENTIFIER      shift, and go to state 30
    NOT             shift, and go to state 31
    PLUS            shift, and go to state 32
    MINUS           shift, and go to state 33
    LPAREN          shift, and go to state 34

    expression  go to state 86
    term        go to state 37
    factor      go to state 38


State 63

   40 relexpression: expression GREATER_THAN • expression

    STRING_LITERAL  shift, and go to state 26
    INT_LITERAL     shift, and go to state 27
    DOUBLE_LITERAL  shift, and go to state 28
    BOOL_LITERAL    shift, and go to state 29
    IDENTIFIER      shift, and go to state 30
    NOT             shift, and go to state 31
    PLUS            shift, and go to state 32
    MINUS           shift, and go to state 33
    LPAREN          shift, and go to state 34

    expression  go to state 87
    term        go to state 37
    factor      go to state 38


State 64

   39 relexpression: expression GREATER_EQUAL • expression

    STRING_LITERAL  shift, and go to state 26
    INT_LITERAL     shift, and go to state 27
    DOUBLE_LITERAL  shift, and go to state 28
    BOOL_LITERAL    shift, and go to state 29
    IDENTIFIER      shift, and go to state 30
    NOT             shift, and go to state 31
    PLUS            shift, and go to state 32
    MINUS           shift, and go to state 33
    LPAREN          shift, and go to state 34

    expression  go to state 88
    term        go to state 37
    factor      go to state 38


State 65

   44 expression: term OR • term

    STRING_LITERAL  shift, and go to state 26
    INT_LITERAL     shift, and go to state 27
    DOUBLE_LITERAL  shift, and go to state 28
    BOOL_LITERAL    shift, and go to state 29
    IDENTIFIER      shift, and go to state 30
    NOT             shift, and go to state 31
    PLUS            shift, and go to state 32
    MINUS           shift, and go to state 33
    LPAREN          shift, and go to state 34

    term    go to state 89
    factor  go to state 38


State 66

   42 expression: term PLUS • term

    STRING_LITERAL  shift, and go to state 26
    INT_LITERAL     shift, and go to state 27
    DOUBLE_LITERAL  shift, and go to state 28
    BOOL_LITERAL    shift, and go to state 29
    IDENTIFIER      shift, and go to state 30
    NOT             shift, and go to state 31
    PLUS            shift, and go to state 32
    MINUS           shift, and go to state 33
    LPAREN          shift, and go to state 34

    term    go to state 90
    factor  go to state 38


State 67

   43 expression: term MINUS • term

    STRING_LITERAL  shift, and go to state 26
    INT_LITERAL     shift, and go to state 27
    DOUBLE_LITERAL  shift, and go to state 28
    BOOL_LITERAL    shift, and go to state 29
    IDENTIFIER      shift, and go to state 30
    NOT             shift, and go to state 31
    PLUS            shift, and go to state 32
    MINUS           shift, and go to state 33
    LPAREN          shift, and go to state 34

    term    go to state 91
    factor  go to state 38


State 68

   49 term: factor AND • factor

    STRING_LITERAL  shift, and go to state 26
    INT_LITERAL     shift, and go to state 27
    DOUBLE_LITERAL  shift, and go to state 28
    BOOL_LITERAL    shift, and go to state 29
    IDENTIFIER      shift, and go to state 30
    NOT             shift, and go to state 31
    PLUS            shift, and go to state 32
    MINUS           shift, and go to state 33
    LPAREN          shift, and go to state 34

    factor  go to state 92


State 69

   46 term: factor MULT • factor

    STRING_LITERAL  shift, and go to state 26
    INT_LITERAL     shift, and go to state 27
    DOUBLE_LITERAL  shift, and go to state 28
    BOOL_LITERAL    shift, and go to state 29
    IDENTIFIER      shift, and go to state 30
    NOT             shift, and go to state 31
    PLUS            shift, and go to state 32
    MINUS           shift, and go to state 33
    LPAREN          shift, and go to state 34

    factor  go to state 93


State 70

   48 term: factor DIV • factor

    STRING_LITERAL  shift, and go to state 26
    INT_LITERAL     shift, and go to state 27
    DOUBLE_LITERAL  shift, and go to state 28
    BOOL_LITERAL    shift, and go to state 29
    IDENTIFIER      shift, and go to state 30
    NOT             shift, and go to state 31
    PLUS            shift, and go to state 32
    MINUS           shift, and go to state 33
    LPAREN          shift, and go to state 34

    factor  go to state 94


State 71

   47 term: factor POW • factor

    STRING_LITERAL  shift, and go to state 26
    INT_LITERAL     shift, and go to state 27
    DOUBLE_LITERAL  shift, and go to state 28
    BOOL_LITERAL    shift, and go to state 29
    IDENTIFIER      shift, and go to state 30
    NOT             shift, and go to state 31
    PLUS            shift, and go to state 32
    MINUS           shift, and go to state 33
    LPAREN          shift, and go to state 34

    factor  go to state 95


State 72

   25 function_call_statement: IDENTIFIER LPAREN function_arguments RPAREN •

    $default  reduce using rule 25 (function_call_statement)


State 73

   29 function_argument_list: function_argument_list COMMA • relexpression

    STRING_LITERAL  shift, and go to state 26
    INT_LITERAL     shift, and go to state 27
    DOUBLE_LITERAL  shift, and go to state 28
    BOOL_LITERAL    shift, and go to state 29
    IDENTIFIER      shift, and go to state 30
    NOT             shift, and go to state 31
    PLUS            shift, and go to state 32
    MINUS           shift, and go to state 33
    LPAREN          shift, and go to state 34

    relexpression  go to state 96
    expression     go to state 36
    term           go to state 37
    factor         go to state 38


State 74

   21 parameter: TYPE • IDENTIFIER

    IDENTIFIER  shift, and go to state 97


State 75

   16 function_definition_statement: FUNCTION IDENTIFIER LPAREN function_parameters • RPAREN ARROW function_return_type function_body

    RPAREN  shift, and go to state 98


State 76

   18 function_parameters: function_parameter_list •
   20 function_parameter_list: function_parameter_list • COMMA parameter

    COMMA  shift, and go to state 99

    $default  reduce using rule 18 (function_parameters)


State 77

   19 function_parameter_list: parameter •

    $default  reduce using rule 19 (function_parameter_list)


State 78

   14 declaration_statement: TYPE IDENTIFIER ASSIGN relexpression •

    $default  reduce using rule 14 (declaration_statement)


State 79

   30 print_statement: PRINT LPAREN relexpression RPAREN •

    $default  reduce using rule 30 (print_statement)


State 80

   32 if_statement: IF LPAREN relexpression RPAREN • block
   33             | IF LPAREN relexpression RPAREN • block ELSE block

    LBRACE  shift, and go to state 100

    block  go to state 101


State 81

   31 while_statement: WHILE LPAREN relexpression RPAREN • block

    LBRACE  shift, and go to state 100

    block  go to state 102


State 82

   59 factor: LPAREN relexpression RPAREN •

    $default  reduce using rule 59 (factor)


State 83

   37 relexpression: expression EQUAL expression •

    $default  reduce using rule 37 (relexpression)


State 84

   38 relexpression: expression NOT_EQUAL expression •

    $default  reduce using rule 38 (relexpression)


State 85

   35 relexpression: expression LESS_THAN expression •

    $default  reduce using rule 35 (relexpression)


State 86

   36 relexpression: expression LESS_EQUAL expression •

    $default  reduce using rule 36 (relexpression)


State 87

   40 relexpression: expression GREATER_THAN expression •

    $default  reduce using rule 40 (relexpression)


State 88

   39 relexpression: expression GREATER_EQUAL expression •

    $default  reduce using rule 39 (relexpression)


State 89

   44 expression: term OR term •

    $default  reduce using rule 44 (expression)


State 90

   42 expression: term PLUS term •

    $default  reduce using rule 42 (expression)


State 91

   43 expression: term MINUS term •

    $default  reduce using rule 43 (expression)


State 92

   49 term: factor AND factor •

    $default  reduce using rule 49 (term)


State 93

   46 term: factor MULT factor •

    $default  reduce using rule 46 (term)


State 94

   48 term: factor DIV factor •

    $default  reduce using rule 48 (term)


State 95

   47 term: factor POW factor •

    $default  reduce using rule 47 (term)


State 96

   29 function_argument_list: function_argument_list COMMA relexpression •

    $default  reduce using rule 29 (function_argument_list)


State 97

   21 parameter: TYPE IDENTIFIER •

    $default  reduce using rule 21 (parameter)


State 98

   16 function_definition_statement: FUNCTION IDENTIFIER LPAREN function_parameters RPAREN • ARROW function_return_type function_body

    ARROW  shift, and go to state 103


State 99

   20 function_parameter_list: function_parameter_list COMMA • parameter

    TYPE  shift, and go to state 74

    parameter  go to state 104


State 100

   12 block: LBRACE • statement_list RBRACE

    IDENTIFIER  shift, and go to state 1
    FUNCTION    shift, and go to state 2
    TYPE        shift, and go to state 3
    PRINT       shift, and go to state 4
    IF          shift, and go to state 5
    WHILE       shift, and go to state 6
    RETURN      shift, and go to state 7

    statement_list                 go to state 105
    statement                      go to state 10
    declaration_statement          go to state 11
    assignment_statement           go to state 12
    function_definition_statement  go to state 13
    function_call_statement        go to state 14
    print_statement                go to state 15
    while_statement                go to state 16
    if_statement                   go to state 17
    return_statement               go to state 18


State 101

   32 if_statement: IF LPAREN relexpression RPAREN block •
   33             | IF LPAREN relexpression RPAREN block • ELSE block

    ELSE  shift, and go to state 106

    $default  reduce using rule 32 (if_statement)


State 102

   31 while_statement: WHILE LPAREN relexpression RPAREN block •

    $default  reduce using rule 31 (while_statement)


State 103

   16 function_definition_statement: FUNCTION IDENTIFIER LPAREN function_parameters RPAREN ARROW • function_return_type function_body

    TYPE  shift, and go to state 107
    VOID  shift, and go to state 108

    function_return_type  go to state 109


State 104

   20 function_parameter_list: function_parameter_list COMMA parameter •

    $default  reduce using rule 20 (function_parameter_list)


State 105

    3 statement_list: statement_list • statement
   12 block: LBRACE statement_list • RBRACE

    IDENTIFIER  shift, and go to state 1
    FUNCTION    shift, and go to state 2
    TYPE        shift, and go to state 3
    PRINT       shift, and go to state 4
    IF          shift, and go to state 5
    WHILE       shift, and go to state 6
    RETURN      shift, and go to state 7
    RBRACE      shift, and go to state 110

    statement                      go to state 40
    declaration_statement          go to state 11
    assignment_statement           go to state 12
    function_definition_statement  go to state 13
    function_call_statement        go to state 14
    print_statement                go to state 15
    while_statement                go to state 16
    if_statement                   go to state 17
    return_statement               go to state 18


State 106

   33 if_statement: IF LPAREN relexpression RPAREN block ELSE • block

    LBRACE  shift, and go to state 100

    block  go to state 111


State 107

   22 function_return_type: TYPE •

    $default  reduce using rule 22 (function_return_type)

